--- a/helpers.css
+++ b/helpers.css
@@ -8,17 +8,19 @@
   }
   body{
     margin: 0;
+    background-color: #2A3132;
   }
-  h1 {
-    font-family: 'Kadwa', serif;
-    color: #ffffff;
-    font-size: 2.5em;
-    font-weight: 100;
+  h1{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 3em;
+    color: #689774;
   }
-  p {
-    color: #2A3132;
-    font-family: 'Amiko', sans-serif;
-    font-size: 1em;
+  p{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #FFFFFF;
   }
   nav{
     text-align: center;
@@ -70,11 +72,17 @@
   .text-left{
     text-align: left;
   }
+  .text-right{
+    text-align: right;
+  }
   .margin-auto{
     margin: auto;
   }
-  .margin-left-5{
-    margin-left: 0.5em;
+  .margin-left-10{
+    margin-left: 1em;
+  }
+  .margin-top-5{
+    margin-top: 0.5em;
   }
   .padding-5{
     padding: 0.5em;
@@ -97,7 +105,7 @@
   .bg-color-tan{
     background-color: #efdfbb;
   }
-  a .underline{
+  div .underline{
     position: relative;
   }
   .underline:before{
@@ -107,7 +115,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #2A3132;
+    background-color: #689774;
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
@@ -118,5 +126,9 @@
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
+  }
+  .hover-green:hover{
+    color: #689774;
+    transition: .5s;
   }
 </style>
