--- a/personal-site/src/index.css
+++ b/personal-site/src/index.css
@@ -15,10 +15,6 @@
     height: 100%;
 }
 
-.custom-50-wrapper {
-    width: 49%;
-}
-
 .cert-icon {
     max-width: 180px;
 }
@@ -81,8 +77,8 @@ a.underline-grow{
     transition: all .33s ease-in-out;
 }
 
-@media (max-width: 524px) {
+@media (min-width: 1024px) {
     .custom-50-wrapper {
-        width: 50%;
+        width: 49%;
     }
 }
